// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return a Layout.tsx file 1`] = `
"import { Inter } from 'next/font/google'
import { ReactNode } from 'react'

import './globals.css'

// eslint-disable-next-line new-cap
const inter = Inter({ subsets: ['latin'] })

export const metadata = {
  title: 'Create Next App',
  description: 'Generated by create next app',
}

export default function RootLayout({ children }: { children: ReactNode }) {
  return (
    <html lang="en">
      <body className={inter.className}>
        {children}
      </body>
    </html>
  )
}
"
`;

exports[`should return a Layout.tsx file including SWR 1`] = `
"import { Inter } from 'next/font/google'
import { ReactNode } from 'react'

import './globals.css'
  
import SWRProvider from 'providers/swrProvider'

// eslint-disable-next-line new-cap
const inter = Inter({ subsets: ['latin'] })

export const metadata = {
  title: 'Create Next App',
  description: 'Generated by create next app',
}

export default function RootLayout({ children }: { children: ReactNode }) {
  return (
    <html lang="en">
      <body className={inter.className}>
        <SWRProvider>{children}</SWRProvider>
      </body>
    </html>
  )
}
"
`;

exports[`should return a Layout.tsx file including Tanstack Query 1`] = `
"import { Inter } from 'next/font/google'
import { ReactNode } from 'react'

import './globals.css'

import ReactQueryProvider from 'providers/reactQueryProvider'

// eslint-disable-next-line new-cap
const inter = Inter({ subsets: ['latin'] })

export const metadata = {
  title: 'Create Next App',
  description: 'Generated by create next app',
}

export default function RootLayout({ children }: { children: ReactNode }) {
  return (
    <html lang="en">
      <body className={inter.className}>
        <ReactQueryProvider>{children}</ReactQueryProvider>
      </body>
    </html>
  )
}
"
`;
